diesel_compile_tests/tests/fail/table_invalid_syntax_1.stderr
error: Invalid `table!` syntax. Please see the `table!` macro docs for more info.
 --> $DIR/table_invalid_syntax_1.rs:3:1
  |
3 | / table! {
4 | |     12
5 | | }
  | |_^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
